# piecewise

./: Cargo.toml  README.md
src/: lib.rs
src/math/: common.rs  curve.rs  mod.rs  quote.rs
src/solver/: algorithm.rs  common.rs  mod.rs
